# qt-5.4.1

./: README.md  readme.txt
Qt-5.4.1/lib/: libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5Concurrent.la  libQt5Concurrent.prl  libQt5Concurrent.so.5.4.1  libQt5Core.la  libQt5Core.prl  libQt5DBus.la  libQt5DBus.prl  libQt5DBus.so.5.4.1  libQt5Gui.la  libQt5Gui.prl  libQt5Location.la  libQt5Location.prl  libQt5Location.so.5.4.1  libQt5Multimedia.la  libQt5Multimedia.prl  libQt5Multimedia.so.5.4.1  libQt5MultimediaQuick_p.la  libQt5MultimediaQuick_p.prl  libQt5MultimediaQuick_p.so.5.4.1  libQt5MultimediaWidgets.la  libQt5MultimediaWidgets.prl  libQt5MultimediaWidgets.so.5.4.1  libQt5Network.la  libQt5Network.prl  libQt5Network.so.5.4.1  libQt5OpenGL.la  libQt5OpenGL.prl  libQt5OpenGL.so.5.4.1  libQt5OpenGLExtensions.la  libQt5OpenGLExtensions.prl  libQt5PlatformSupport.la  libQt5PlatformSupport.prl  libQt5Positioning.la  libQt5Positioning.prl  libQt5Positioning.so.5.4.1  libQt5PrintSupport.la  (+39 more)
sdk/: Makefile  Makefile_sub  complile_fbinit.sh  debuglevelset  fbinit  fbinit.c  logmake.txt  makeconfig  mdev.conf  push.bat  pushallsdklib.bat  pushallsdklib.bat.txt  pushgdb.bat  pushonly.bat  pushsdklib.bat  pushsdktest.bat  qt_run.bat  readme.txt  sdktest  usr_t3linux.IAD  usr_t3linux.IMB  usr_t3linux.IMD  usr_t3linux.PFI  usr_t3linux.PO  usr_t3linux.PR  usr_t3linux.PRI  usr_t3linux.SearchResults  usr_t3linux.WK3  xplayerdemo  xplayerdemo.txt  xplayerdemoH264  xplayerdemo_auto_run.sh
sdk/logcat/: Makefile.am  logcat  logcat.cpp
ui_qt/: DvrUI  DvrUI.pro  Makefile  makedvr
(+571 files in other folders)
